﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-11-11
	Fixed: Power auto-adjust settings were saved incorrectly.
	Changed: Power mode name strings are now more forgiving and varied.
	Changed: Info tab disabled until better use can be figured out for it.
### 2018-11-10
	Fixed: Power auto-adjust tuning was not saved if modified in the UI.
### 2018-11-09
	Fixed: Background powerdown setting was not saved from UI.
	Fixed: Watchlist power mode is now properly handled with auto, manual and rule-based power modes.
	Fixed: Powermode interaction with foreground only and background powerdown settings.
	Added: Audio Volume Strategy 4 and 5. 4 is Decrease from Full, 5 is Increase from Mute. Volume is untouched otherwise.
	Changed: Internet failure should be less spammy.
	Changed: Average uptime calculation.
	Changed: Crashing before logging system is online will cause custom crash.log to be written in logs folder instead of using EventLog.
	Internal: String handling changed.
### 2018-11-07
	Fixed: Exception handling in startup.
	Added: Multicore JIT profiling. This may speed up TM, especially for startup. First startup is unaffected.
### 2018-11-05
	Changed: Internal sanity checking reduced. We trust code that has not caused problems more.
	Changed: Trace output is no longer provided on non-debug builds.
	Changed: Console output disabled for non-debug versions.
	Internal: Removed several unused internal references (WindowsBase, System.Xaml, PresentationCore, PresentationFramework).
### 2018-10-31
	Fixed: Crash on last day of a month
	Fixed: Setting affinity strategy to ignored from force or limit in UI is now respected.
	Fixed: Watchlist formatting is now uniform whether you just started TM or modified a rule.
### 2018-10-22
	Fixed: Foreground only option did not prevent the app from being changed back by normal rescans, ignoring the foreground only option.
### 2018-10-13