@@ -3,6 +3,11 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.11...]
+### 2018-11-12
+	Added: 'Path visibility' option to Watchlist. Currently only configurable directly through the .ini.
+		Valid values are: 0=File (default), 1=File+Folder, 3=Full Path
+		2 will be for "smart" visibility which is not yet implemented
+	Added: Show inaction option now shows inaction relating to 'Ignore System32' option in Core.ini
 ### 2018-11-11
 	Fixed: Power auto-adjust settings were saved incorrectly.
 	Changed: Power mode name strings are now more forgiving and varied.
